--- a/package.json
+++ b/package.json
@@ -1,24 +1,29 @@
 {
   "name": "personal-website",
-  "version": "1.0.0",
-  "description": "Website containing my portfolio and other stuff.",
-  "homepage": "https://github.com/NiranjanD0/personal-website#readme",
-  "bugs": {
-    "url": "https://github.com/NiranjanD0/personal-website/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/NiranjanD0/personal-website.git"
-  },
-  "license": "ISC",
-  "author": "Niranjan",
-  "type": "commonjs",
-  "main": "index.js",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "typescript": "^5.9.3"
+    "@tailwindcss/vite": "^4.1.18",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "tailwindcss": "^4.1.18"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "@types/react": "^19.2.5",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
+    "vite": "^7.2.4"
+  }
 }
